# watermelon

./: .gitignore  .gitmodules  404.html  README.md  TODO.md  dev-requirements.txt  introduction.html  print.html  pyproject.toml  requirements.txt  searchindex.js  searchindex.json  setup.cfg
.github/workflows/: mdbook-pages.yml  todo-gen.yml
doc/: actions.md  agents.md  examples.md  graph.md  vertices.md
doc/lua/: link_files.lua
doc/styles/: main.css
docs/: agents.md  book.toml  examples.md  graph.md  soc.md
docs/src/: SUMMARY.md
docs/styles/: main.css
examples/: __init__.py  __main__.py  basic_simulation.py  hello_world.py  simple_graph.py  simulation.py
examples/_graphs/: __init__.py  toy.py
examples/simulation1/: __init__.py  result.csv
olddocs/: examples.md  graph.md  vertices.md
olddocs/template/: nav
reference/model/: agents.html  graph.html  model_intro.html  soc.html  vertices.html
reference/simulator/: data_extractor.html  simulator.html  simulator_intro.html
reference/solver/: problem.html  solver_intro.html
reference/solver/ga/: architecture.html  encoding.html  ga_intro.html
src/watermelon/: __init__.py  defaults.py  exceptions.py
src/watermelon/model/: __init__.py  actions.py  (+13 more)
src/watermelon_common/: __init__.py  logger.py
src/watermelon_solver/: __init__.py  agent_solver.py  charger_solver.py
src/watermelon_utils/: __init__.py  console.py  stdout.py
sys/: build.sh  clean.sh  doc.sh
tests/: __init__.py
tests/integration/: __init__.py
tests/watermelon/: __init__.py
tools/: gen_todo.sh
usage/: examples.html
(+32 files in other folders)
