[metadata]
name = watermelon
description = Graph solver
author = CASE
license = MIT
license_file = LICENSE
platforms = supported-platforms
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

# These options can be changed according to your project
[options]
packages =
    watermelon
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
watermelon = py.typed
